fixing slider alignment bugs

--- a/addons/shared_addons/themes/brd/sass/_slider.scss
+++ b/addons/shared_addons/themes/brd/sass/_slider.scss
@@ -41,7 +41,7 @@
 	h3{
 		position:absolute;
 		left: 12%;
-		top:30%;
+		top:38%;
 		font-size: 3.75em; 
 		text-transform:uppercase;
 		font-family: $fjalla;
